dsp/haskelldsp/Numeric/Special/Airy_stub_ffi.h

#include <gsl/gsl_errno.h>
#include <gsl/gsl_sf_airy.h>
#include "HsFFI.h"
extern double prim_airy_Ai(double x);
extern void* prim_airy_Ai_e(double x);
extern double access_prim_airy_Ai_e_val(HsPtr);
extern double access_prim_airy_Ai_e_err(HsPtr);
extern int access_prim_airy_Ai_e_gc_failed(HsPtr);
extern void* access_prim_airy_Ai_e_gc_failstring(HsPtr);
extern double prim_airy_Ai_scaled(double x);
extern void* prim_airy_Ai_scaled_e(double x);
extern double access_prim_airy_Ai_scaled_e_val(HsPtr);
extern double access_prim_airy_Ai_scaled_e_err(HsPtr);
extern int access_prim_airy_Ai_scaled_e_gc_failed(HsPtr);
extern void* access_prim_airy_Ai_scaled_e_gc_failstring(HsPtr);
extern double prim_airy_Ai_deriv(double x);
extern void* prim_airy_Ai_deriv_e(double x);
extern double access_prim_airy_Ai_deriv_e_val(HsPtr);
extern double access_prim_airy_Ai_deriv_e_err(HsPtr);
extern int access_prim_airy_Ai_deriv_e_gc_failed(HsPtr);
extern void* access_prim_airy_Ai_deriv_e_gc_failstring(HsPtr);
extern double prim_airy_Ai_deriv_scaled(double x);
extern void* prim_airy_Ai_deriv_scaled_e(double x);
extern double access_prim_airy_Ai_deriv_scaled_e_val(HsPtr);
extern double access_prim_airy_Ai_deriv_scaled_e_err(HsPtr);
extern int access_prim_airy_Ai_deriv_scaled_e_gc_failed(HsPtr);
extern void* access_prim_airy_Ai_deriv_scaled_e_gc_failstring(HsPtr);
extern double prim_airy_zero_Ai(int s);
extern void* prim_airy_zero_Ai_e(int s);
extern double access_prim_airy_zero_Ai_e_val(HsPtr);
extern double access_prim_airy_zero_Ai_e_err(HsPtr);
extern int access_prim_airy_zero_Ai_e_gc_failed(HsPtr);
extern void* access_prim_airy_zero_Ai_e_gc_failstring(HsPtr);
extern double prim_airy_zero_Ai_deriv(int s);
extern void* prim_airy_zero_Ai_deriv_e(int s);
extern double access_prim_airy_zero_Ai_deriv_e_val(HsPtr);
extern double access_prim_airy_zero_Ai_deriv_e_err(HsPtr);
extern int access_prim_airy_zero_Ai_deriv_e_gc_failed(HsPtr);
extern void* access_prim_airy_zero_Ai_deriv_e_gc_failstring(HsPtr);
extern double prim_airy_Bi(double x);
extern void* prim_airy_Bi_e(double x);
extern double access_prim_airy_Bi_e_val(HsPtr);
extern double access_prim_airy_Bi_e_err(HsPtr);
extern int access_prim_airy_Bi_e_gc_failed(HsPtr);
extern void* access_prim_airy_Bi_e_gc_failstring(HsPtr);
extern double prim_airy_Bi_scaled(double x);
extern void* prim_airy_Bi_scaled_e(double x);
extern double access_prim_airy_Bi_scaled_e_val(HsPtr);
extern double access_prim_airy_Bi_scaled_e_err(HsPtr);
extern int access_prim_airy_Bi_scaled_e_gc_failed(HsPtr);
extern void* access_prim_airy_Bi_scaled_e_gc_failstring(HsPtr);
extern double prim_airy_Bi_deriv(double x);
extern void* prim_airy_Bi_deriv_e(double x);
extern double access_prim_airy_Bi_deriv_e_val(HsPtr);
extern double access_prim_airy_Bi_deriv_e_err(HsPtr);
extern int access_prim_airy_Bi_deriv_e_gc_failed(HsPtr);
extern void* access_prim_airy_Bi_deriv_e_gc_failstring(HsPtr);
extern double prim_airy_Bi_deriv_scaled(double x);
extern void* prim_airy_Bi_deriv_scaled_e(double x);
extern double access_prim_airy_Bi_deriv_scaled_e_val(HsPtr);
extern double access_prim_airy_Bi_deriv_scaled_e_err(HsPtr);
extern int access_prim_airy_Bi_deriv_scaled_e_gc_failed(HsPtr);
extern void* access_prim_airy_Bi_deriv_scaled_e_gc_failstring(HsPtr);
extern double prim_airy_zero_Bi(int s);
extern void* prim_airy_zero_Bi_e(int s);
extern double access_prim_airy_zero_Bi_e_val(HsPtr);
extern double access_prim_airy_zero_Bi_e_err(HsPtr);
extern int access_prim_airy_zero_Bi_e_gc_failed(HsPtr);
extern void* access_prim_airy_zero_Bi_e_gc_failstring(HsPtr);
extern double prim_airy_zero_Bi_deriv(int s);
extern void* prim_airy_zero_Bi_deriv_e(int s);
extern double access_prim_airy_zero_Bi_deriv_e_val(HsPtr);
extern double access_prim_airy_zero_Bi_deriv_e_err(HsPtr);
extern int access_prim_airy_zero_Bi_deriv_e_gc_failed(HsPtr);
extern void* access_prim_airy_zero_Bi_deriv_e_gc_failstring(HsPtr);